add azure prompt post

--- a/posts/2024-06-20-bcavlie-rag/index.qmd
+++ b/posts/2024-06-20-bcavlie-rag/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Notes from Benjamin Clavie's RAG talk"
-author: "Lawrence"
+author: "Lawrence Wu"
 date: "2024-06-20"
 categories: [rag, llm]
 ---
