--- a/posts/2024-06-20-simon-willison-llm-tool/index.qmd
+++ b/posts/2024-06-20-simon-willison-llm-tool/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Simon Willison's CLI tools"
-author: "Lawrence"
+author: "Lawrence Wu"
 date: "2024-06-20"
 categories: [cli, llm]
 ---
