--- a/posts/2024-06-19-creating-a-til/index.qmd
+++ b/posts/2024-06-19-creating-a-til/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "How to create a TIL with Quarto"
-author: "Lawrence"
+author: "Lawrence Wu"
 date: "2024-06-19"
 categories: [quarto]
 ---
