--- a/posts/2024-10-11-prompt-generation-metaprompt/index.qmd
+++ b/posts/2024-10-11-prompt-generation-metaprompt/index.qmd
@@ -16,7 +16,9 @@ They use "meta-prompts" and "meta-schemas" to do this.
 
 They also say they may use more advanced techniques like DSPy and [Gradient Descent](https://arxiv.org/abs/2305.03495).
 
-The meta prompt is quite instructive. It's awesome they've open sourced this. I've started to use LLMs to generate prompts too. They generally do a better job than I do at being comphrehensive. Of course I will then modify what the LLM generates for my specific use case and run some evaluations. Below are two meta-prompt examples and two meta-schema examples. 
+The meta prompt is quite instructive. It's awesome they've open sourced this. I've started to use LLMs to generate prompts too. Of course I will then modify what the LLM generates for my specific use case and run some evaluations. Language models generally do a better job than I do at being comprehensive on the first pass of a use case. This is because I and other humans are forgetful and not as thorough as a well-prompted language model, this idea reminds me of a [study that said 80% of ChatGPT's answers were better than a physician](https://www.health.harvard.edu/blog/can-ai-answer-medical-questions-better-than-your-doctor-202403273028). This is not to say humans will not write better prompts than a language model will. But once you've done a task multiple times, you may not be as thorough, rush through and not have time to do robust prompt engineering. 
+
+Below are two meta-prompt examples and two meta-schema examples. 
 
 ## Meta-Prompt: Text-Out
 
