--- a/posts/2025-03-01-mcp-talk/index.qmd
+++ b/posts/2025-03-01-mcp-talk/index.qmd
@@ -9,7 +9,7 @@ categories: [mcp]
 
 Channel: AI Engineer
 
-Video: https://youtube.com/watch?v=kQmXtrmQ5Zg
+{{< video https://youtube.com/watch?v=kQmXtrmQ5Zg >}}
 
 ## Summary
 
