--- a/posts/2025-03-01-mcp-talk/index.qmd
+++ b/posts/2025-03-01-mcp-talk/index.qmd
@@ -2,7 +2,7 @@
 title: "Summary of Building Agents with Model Context Protocol - Full Workshop with Mahesh Murag of Anthropic"
 author: "Lawrence Wu"
 date: "2025-03-01"
-categories: [mcp]
+categories: [MCP]
 ---
 
 # Building Agents with Model Context Protocol - Full Workshop with Mahesh Murag of Anthropic
@@ -15,11 +15,11 @@ Channel: AI Engineer
 
 ### [What is MCP?](https://youtube.com/watch?v=kQmXtrmQ5Zg&t=0) (0:00:00)
 
-Mahesh Murag from Anthropic discusses the Model Context Protocol (mCP), emphasizing its role in enhancing AI applications by standardizing how they interact with external systems. He highlights the evolution of AI models and the need for better context integration, which mCP addresses by allowing seamless connections between AI applications and various data sources. The protocol aims to reduce fragmentation in AI development, enabling more powerful and context-rich applications while facilitating collaboration across teams in enterprises. Adoption of mCP has been growing, with a significant number of community-built servers and integrations already in place.
+Mahesh Murag from Anthropic discusses the Model Context Protocol (MCP), emphasizing its role in enhancing AI applications by standardizing how they interact with external systems. He highlights the evolution of AI models and the need for better context integration, which MCP addresses by allowing seamless connections between AI applications and various data sources. The protocol aims to reduce fragmentation in AI development, enabling more powerful and context-rich applications while facilitating collaboration across teams in enterprises. Adoption of MCP has been growing, with a significant number of community-built servers and integrations already in place.
 
 ### [Building with MCP](https://youtube.com/watch?v=kQmXtrmQ5Zg&t=579) (0:09:39)
 
-The section discusses the Model Context Protocol (mCP) and its core components, which include tools, resources, and prompts. Tools allow the client application to interact with the server, enabling the model to determine when to invoke them, while resources provide dynamic data that applications can control. Prompts are user-controlled templates for common interactions, facilitating richer engagement with the server. The mCP framework enhances the functionality of applications by providing a standardized way to integrate context and tools, complementing existing agent frameworks rather than replacing them.
+The section discusses the Model Context Protocol (MCP) and its core components, which include tools, resources, and prompts. Tools allow the client application to interact with the server, enabling the model to determine when to invoke them, while resources provide dynamic data that applications can control. Prompts are user-controlled templates for common interactions, facilitating richer engagement with the server. The MCP framework enhances the functionality of applications by providing a standardized way to integrate context and tools, complementing existing agent frameworks rather than replacing them.
 
 ### [MCP & Agents](https://youtube.com/watch?v=kQmXtrmQ5Zg&t=1585) (0:26:25)
 
