--- a/posts/2025-07-07-online-passport-renewal/index.qmd
+++ b/posts/2025-07-07-online-passport-renewal/index.qmd
@@ -18,3 +18,4 @@ Timeline:
 - 2025-07-09 - U.S. Department of State has received your application. Application Status: In Process
 - 2025-07-10, 8pm - Approved
 - 2025-07-10, 10:30pm - Shipped
+- 2025-07-11 - Printing and preparing to give it to you. (I thought it was shipped already??)
