--- a/posts/2025-07-07-online-passport-renewal/index.qmd
+++ b/posts/2025-07-07-online-passport-renewal/index.qmd
@@ -5,7 +5,15 @@ date: "2025-07-07"
 categories: [Random]
 ---
 
-Based on this WSJ article, [America Has Pulled Off the Impossible. It Made Getting a Passport Simple](https://www.wsj.com/business/us-passport-online-renewal-e58b51d1), I learned that it's now possible to renew your US Passport online. I thought this was too good to be true so I tried going through the process. I found out I was [eligible](https://travel.state.gov/content/travel/en/passports/have-passport/renew-online.html)! The process was pretty easy on a phone:
+Based on this WSJ article, [America Has Pulled Off the Impossible. It Made Getting a Passport Simple](https://www.wsj.com/business/us-passport-online-renewal-e58b51d1), I learned that it's now possible to renew your US Passport online. I thought this was too good to be true so I tried going through the process. I found out I was [eligible](https://travel.state.gov/content/travel/en/passports/have-passport/renew-online.html)! 
+
+The main points of eligibility are below. Too bad you cannot do this for kids. 
+- The passport you are renewing is or was valid for 10 years, and you are age 25 or older. 
+- The passport you are renewing is either expiring within one year or has expired less than five years ago.
+- You are not changing your name, sex, date of birth, or place of birth.
+- You are not traveling for at least 6 weeks from the date you will submit your application. We will only offer routine service, and the time it takes to get a passport will be the same as renewing by mail. 
+
+The process was pretty easy on a phone:
 
 - fill out some personal data
 - take a picture of yourself (the service will automatically crop your picture). Though it doesn't accept HEIC images, only JPEG less than 10mb so I had to convert HEIC to JPEG and shrink it a little to upload it.
